# EyeRAG

./: .env.example  .gitignore  EXCLUDED_FILES.md  LICENSE  README.md  config.py  pyproject.toml  release_to_github.sh  requirements.txt  results
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Data/: patient_data.xlsx  patient_data_example.xlsx
RESULTS0/eye_rag/: 1_deepseek-chat_LLM_HierarchicalIndexRAG_Response.json  1_deepseek-chat_LLM_HypotheticalRAG_Response.json  1_deepseek-chat_LLM_LightRAG_Hybrid_Distillation_Response.json  1_deepseek-chat_LLM_NaiveRAG_Response.json  1_deepseek-chat_LLM_Response.json  2_deepseek-chat_LLM_HierarchicalIndexRAG_Response.json  2_deepseek-chat_LLM_HypotheticalRAG_Response.json  2_deepseek-chat_LLM_LightRAG_Hybrid_Distillation_Response.json  2_deepseek-chat_LLM_NaiveRAG_Response.json  2_deepseek-chat_LLM_Response.json  3_deepseek-chat_LLM_HierarchicalIndexRAG_Response.json  3_deepseek-chat_LLM_HypotheticalRAG_Response.json  3_deepseek-chat_LLM_LightRAG_Hybrid_Distillation_Response.json  3_deepseek-chat_LLM_NaiveRAG_Response.json  3_deepseek-chat_LLM_Response.json
RESULTS0/eye_rag_match_results/deepseek-chat/: 1_deepseek-chat_LLM_HierarchicalIndexRAG_Response|deepseek-chat_LLM_HypotheticalRAG_Response.json  1_deepseek-chat_LLM_HierarchicalIndexRAG_Response|deepseek-chat_LLM_LightRAG_Hybrid_Distillation_Response.json  1_deepseek-chat_LLM_HierarchicalIndexRAG_Response|deepseek-chat_LLM_NaiveRAG_Response.json  1_deepseek-chat_LLM_HierarchicalIndexRAG_Response|deepseek-chat_LLM_Response.json  (+24 more)
eye_rag/: __init__.py  llm.py  utils.py
eye_rag/graph/: __init__.py  hi_rag_graph.py  hypothetical_rag_graph.py  lightrag_distill_context_graph.py  lightrag_graph.py  naive_rag_graph.py  vanilla_llm_graph.py
eye_rag/graph_node/: __init__.py  _state.py  answer_question.py  distill_retrieval.py  hi_rag.py  lightrag.py  naive_rag.py  rewrite_question.py
eye_rag/handle_results/: cal_p.py  plot_radar_data.py  rank_result_plot.py
eye_rag/qa/: dialog.py  generate_questions.py  patient_data.py
eye_rag/rag/: __init__.py  rag_util.py
eye_rag/ranking/: llm_as_a_judge.py  multi_judge.py  rank.py
eye_rag/tools/: clinical_dialogue.py  construct_medical_guide_db.py  demo_clinical_dialogue.py  eval_eye_rag.py
lightrag/: base.py  constants.py  lightrag.py  llm.py  operate.py  prompt.py  prompt_cn.py  rerank.py  utils.py
lightrag/api/: config.py  lightrag_server.py
lightrag/kg/: memgraph_impl.py  milvus_impl.py  neo4j_impl.py  networkx_impl.py  postgres_impl.py
lightrag/llm/: binding_options.py  openai.py
tests/: __init__.py  test_ranking.py
(+652 files in other folders)
